--- a/Wikipedia/iOS Native Localizations/es.lproj/Localizable.stringsdict
+++ b/Wikipedia/iOS Native Localizations/es.lproj/Localizable.stringsdict
@@ -598,7 +598,7 @@
 	<key>year-in-review-personalized-editing-subtitle-format</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>Has editado Wikipedia %#@v1@. Gracias por ser uno de los editores voluntarios que marcan la diferencia en los proyectos Wikimedia de todo el mundo.</string>
+		<string>Editaste Wikipedia %#@v1@. Gracias por ser uno de los editores voluntarios que hacen la diferencia en los proyectos de Wikimedia en todo el mundo.</string>
 		<key>v1</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -614,7 +614,7 @@
 	<key>year-in-review-personalized-editing-title-format</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>Has editado Wikipedia %#@v1@</string>
+		<string>Editaste Wikipedia %#@v1@</string>
 		<key>v1</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -630,7 +630,7 @@
 	<key>year-in-review-personalized-reading-subtitle-format</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>Este año has leído %#@v1@. Este año Wikipedia tenía %2$@ millones de artículos disponibles en más de %3$@ lenguas activas. Te uniste a millones de personas para ampliar conocimientos y explorar temas diversos.</string>
+		<string>Este año, leíste %#@v1@. Wikipedia tuvo más de %2$@ millones de artículos disponibles en más de %3$@ idiomas activos. Acompañaste a millones de personas en la expansión del conocimiento y la exploración de diversos temas.</string>
 		<key>v1</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -646,7 +646,7 @@
 	<key>year-in-review-personalized-reading-title-format</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>Has leído %#@v1@ este año</string>
+		<string>Leíste %#@v1@ este año</string>
 		<key>v1</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
