--- a/Wikipedia/Localizations/de.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/de.lproj/Localizable.strings
@@ -168,7 +168,7 @@
 "back-button-accessibility-label" = "Zurück";
 "back-button-popover-title" = "Zum Zurückgehen tippen";
 "button-go-back" = "Zurück";
-"button-next" = "Nächste";
+"button-next" = "Weiter";
 "button-ok" = "Okay";
 "button-publish" = "Veröffentlichen";
 "button-publish-anyway" = "Trotzdem veröffentlichen";
@@ -277,7 +277,7 @@
 "donate-payment-method-prompt-apple-pay-button-title" = "Mit Apple Pay spenden";
 "donate-payment-method-prompt-message" = "Spenden Sie mit Apple Pay oder wählen Sie eine andere Zahlungsmethode.";
 "donate-payment-method-prompt-other-button-title" = "Andere Zahlungsmethode";
-"donate-payment-method-prompt-title" = "Per Apple Pay spenden?";
+"donate-payment-method-prompt-title" = "Mit Apple Pay spenden?";
 "donate-success-title" = "Vielen Dank!";
 "edit-link-display-text-title" = "Angezeigter Text";
 "edit-link-link-target-title" = "Linkziel";
@@ -1062,12 +1062,13 @@
 "wikitext-upload-save-anonymously-warning" = "Bearbeitungen werden der IP-Adresse deines Gerätes zugeordnet. Wenn du „$1“ wählst, verfügst du über mehr Datenschutz.";
 "wikitext-upload-save-sign-in" = "Anmelden";
 "wikitext-upload-save-terms-name" = "Nutzungsbedingungen";
-"year-in-review-day-monday" = "Montags";
-"year-in-review-day-saturday" = "Samstags";
-"year-in-review-day-sunday" = "Sonntags";
-"year-in-review-day-thursday" = "Donnerstags";
-"year-in-review-day-tuesday" = "Dienstags";
-"year-in-review-day-wednesday" = "Mittwochs";
+"year-in-review-day-monday" = "Montag";
+"year-in-review-day-saturday" = "Samstag";
+"year-in-review-day-sunday" = "Sonntag";
+"year-in-review-day-thursday" = "Donnerstag";
+"year-in-review-day-tuesday" = "Dienstag";
+"year-in-review-day-wednesday" = "Mittwoch";
+"year-in-review-day-friday" = "Freitag";
 "year-in-review-personalized-day-title-format" = "Du hast am meisten am $1 gelesen.";
 "year-in-review-feature-announcement-title" = "Erkunde Wikipedia im Rückblick";
 "year-in-review-feature-announcement-body" = "Erfahre, welche Artikel wir gelesen und bearbeitet haben, und teile die Höhepunkte unseres Jahres auf Wikipedia.";
@@ -1075,4 +1076,50 @@
 "year-in-review-feature-explore-body" = "Wikipedia ist die größte Wissensressource aller Zeiten – und sie ist für jeden frei zugänglich. Blicke durch die Linse von Wikipedia auf das Jahr 2024 zurück.";
 "learn-more-title" = "Mehr erfahren";
 "year-in-review-donate" = "Spenden";
-"year-in-review-base-reading-title" = "Wikipedia war in über $1 Sprachen verfügbar";
+"year-in-review-base-reading-title" = "Wikipedia war in über 300 Sprachen verfügbar";
+"year-in-review-base-reading-subtitle" = "Wikipedia hatte dieses Jahr mehr als $1 Millionen Artikel in über $2 aktiven Sprachen. Gemeinsam mit Millionen anderen hast du dein Wissen erweitert und verschiedene Themen erkundet.";
+"year-in-review-base-viewed-title" = "Wir haben Wikipedia-Artikel $1 Milliarden Mal aufgerufen";
+"year-in-review-base-viewed-subtitle" = "iOS-App-Nutzer haben Wikipedia-Artikel $1 Milliarden Mal aufgerufen. Für Menschen auf der ganzen Welt ist Wikipedia die erste Anlaufstelle, wenn es darum geht, eine Frage zu beantworten, Informationen für Schule oder Arbeit nachzuschlagen oder sich neues Wissen anzueignen.";
+"year-in-review-base-saved-title" = "Wir hatten über $1 Millionen Leselisten";
+"year-in-review-base-saved-subtitle" = "Aktive Nutzer der iOS-App hatten dieses Jahr über 31,6 Millionen Leselisten. Durch das Hinzufügen von Artikeln zu Leselisten kannst du auf Artikel zugreifen, auch wenn du offline bist. Außerdem kannst du dich anmelden, um Leselisten geräteübergreifend zu synchronisieren.";
+"year-in-review-base-editors-title" = "Editoren auf der iOS-App haben mehr als $1 Bearbeitungen vorgenommen";
+"year-in-review-base-editors-subtitle" = "Die Wikipedia-Gemeinschaft freiwilliger Editoren hat in diesem Jahr bereits mehr als 452.257 Änderungen auf der iOS-App vorgenommen. Das Herz und die Seele von Wikipedia ist unsere globale Gemeinschaft von freiwilligen Mitarbeitern, Spendern und Milliarden von Lesern wie dir – alle vereint, um unbegrenzten Zugang zu zuverlässigen Informationen zu teilen.";
+"year-in-review-base-edits-title" = "Wikipedia wurde $1 Mal pro Minute bearbeitet";
+"year-in-review-base-edits-subtitle" = "In diesem Jahr wurde Wikipedia durchschnittlich $1 Mal pro Minute bearbeitet. Artikel werden gemeinschaftlich erstellt und mit Hilfe zuverlässiger Quellen verbessert. Wir alle haben Wissen, das wir weitergeben können – [erfahre, wie du dich beteiligen kannst]($2).";
+"year-in-review-personalized-donate-title" = "Deine Großzügigkeit hat Wikipedia in Schwung gehalten";
+"year-in-review-personalized-donate-subtitle" = "Danke, dass du in die Zukunft des freien Wissens investierst. In diesem Jahr hat die Wikimedia Foundation die Technologie verbessert, um alle Leser und freiwilligen Helfer besser zu unterstützen, Tools entwickelt, die die Zusammenarbeit fördern, und Wikipedia in mehr Sprachen zur Verfügung gestellt. [Erfahre mehr über unsere Arbeit]($1).";
+"year-in-review-base-donate-title" = "Keine Werbung auf Wikipedia";
+"year-in-review-base-donate-subtitle" = "Mit deiner Hilfe kann die Wikimedia Foundation – die gemeinnützige Stiftung hinter Wikipedia – weiterhin sicherstellen, dass die Informationen, auf die du dich verlässt, werbefrei und vertrauenswürdig sind, und gleichzeitig den reibungslosen Betrieb von Wikipedia mit modernsten Tools und Technologien gewährleisten. Bitte ziehe noch heute eine Spende in Betracht. [Erfahre mehr über unsere Arbeit]($1).";
+"year-in-review-donate-now" = "Jetzt spenden";
+"year-in-review-survey-title" = "Zufriedenheitsumfrage";
+"survey-submit" = "Absenden";
+"year-in-review-survey-subtitle" = "Hilf mit, deinen Jahresrückblick zu verbessern. Bist du mit diesem Feature zufrieden?";
+"year-in-review-survey-neutral" = "Neutral";
+"year-in-review-survey-satisfied" = "Zufrieden";
+"year-in-review-survey-unsatisfied" = "Unzufrieden";
+"year-in-review-survey-very-satisfied" = "Sehr zufrieden";
+"year-in-review-survey-very-unsatisfied" = "Sehr unzufrieden";
+"year-in-review-survey-additional-thoughts" = "Möchtest du noch etwas sagen?";
+"alt-text-feedback-survey-toast-title" = "Feedback eingereicht";
+"year-in-review-login-title" = "Verbessere deinen Jahresrückblick";
+"year-in-review-login-subtitle" = "Melde dich an oder erstelle ein Konto, um mehr personalisierte Einblicke zu erhalten";
+"profile-page-join-title" = "Anmelden / Wikipedia beitreten";
+"year-in-review-feature-announcement-title-personalized" = "Entdecke dein Wikipedia-Jahr im Rückblick";
+"year-in-review-feature-announcement-body-personalized" = "Erfahre mehr über die Artikel, die du in der Wikipedia-App liest, teile deine Reise und entdecke die Highlights deines Jahres.";
+"year-in-review-feature-explore-body-personalized" = "Erfahre, welche Artikel du in der Wikipedia-App gelesen und welche Änderungen du vorgenommen hast. Dein Leseverlauf wird geschützt aufbewahrt. Die Leseeinblicke werden anhand der lokal gespeicherten Daten auf deinem Gerät erstellt.";
+"year-in-review-personalized-reading-title-format" = "Du hast dieses Jahr $1 Artikel gelesen";
+"year-in-review-personalized-reading-subtitle-format" = "Dieses Jahr hast du $1 Artikel gelesen. Auf Wikipedia waren mehr als %2 Millionen Artikel in über %3 Sprachen verfügbar. Du hast dich Millionen von Menschen angeschlossen, die ihr Wissen erweitert und verschiedene Themen ergründet haben.";
+"year-in-review-personalized-day-subtitle-format" = "Du liest die meisten Artikel am $1. Es ist klar, dass der $1 dein Haupttag ist, um neue Inhalte zu entdecken. Danke, dass du das Beste aus deiner Lesezeit machst!";
+"year-in-review-personalized-saved-title-format" = "Du hast $1 Artikel gespeichert";
+"year-in-review-personalized-saved-subtitle-format" = "Du hast $1 Artikel gespeichert, darunter $2, $3, und $4. Jeder gespeicherte Artikel spiegelt deine Interessen wider und hilft dabei, eine personalisierte Wissensbasis auf Wikipedia aufzubauen.";
+"year-in-review-personalized-editing-title-format" = "Du hast Wikipedia $1 Mal bearbeitet";
+"year-in-review-personalized-editing-subtitle-format" = "Du hast Wikipedia $1 Mal bearbeitet. Vielen Dank, dass du einer der freiwilligen Editoren bist, die bei Wikimedia-Projekten auf der ganzen Welt etwas bewirken.";
+"year-in-review-personalized-edit-views-title-format" = "Deine Bearbeitungen wurden in letzter Zeit mehr als $1 Mal angesehen";
+"year-in-review-personalized-edit-views-subtitle-format" = "Leser in aller Welt schätzen deine Beiträge. In den letzten 2 Monaten wurden die von dir bearbeiteten Artikel insgesamt xxx Mal aufgerufen. Dank Editoren wie dir ist Wikipedia eine sich ständig verbessernde, faktenbasierte und zuverlässige Wissensquelle für die Welt.";
+"year-in-review-button-title" = "Jahresrückblick";
+"profile-year-in-review-login-title" = "Melde dich an, um auf den Jahresrückblick zuzugreifen";
+"profile-year-in-review-login-subtitle" = "Melde dich an oder erstelle ein Konto, um den Jahresrückblick erneut zu sehen und mehr personalisierte Einblicke zu erhalten.";
+"settings-year-in-review-header" = "Wenn du den Jahresrückblick deaktivierst, werden alle gespeicherten personalisierten Einblicke gelöscht und der Jahresrückblick ausgeblendet.";
+"year-in-review-share-text" = "Hier ist mein Wikipedia-Jahresrückblick. Erstellt mit der Wikipedia-App für iOS (https://apps.apple.com/app/wikipedia/id324715238) #WikipediaJahresrückblick";
+"return-button-title" = "Zurück";
+
