--- a/Wikipedia/iOS Native Localizations/fr.lproj/Localizable.stringsdict
+++ b/Wikipedia/iOS Native Localizations/fr.lproj/Localizable.stringsdict
@@ -888,7 +888,7 @@
 	<key>year-in-review-personalized-editing-subtitle-format</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>Vous avez modifié Wikipédia %#@v1@ fois. Merci d'être l'un des contributeurs bénévoles qui font la différence sur les projets Wikimédia du monde entier.</string>
+		<string>Vous avez édité Wikipédia %#@v1@ fois. Merci d'être l'un des rédacteurs bénévoles qui font la différence sur les projets Wikimedia dans le monde entier.</string>
 		<key>v1</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -904,7 +904,7 @@
 	<key>year-in-review-personalized-editing-title-format</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>Vous avez modifié Wikipédia %#@v1@ fois</string>
+		<string>Vous avez édité Wikipédia %#@v1@ fois</string>
 		<key>v1</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -947,7 +947,7 @@
 	<key>year-in-review-personalized-reading-title-format</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>Vous avez lu cette année %1$d article%#@v1@</string>
+		<string>Vous avez lu %1$d article%#@v1@ cette année</string>
 		<key>v1</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -960,26 +960,10 @@
 			<string>s</string>
 		</dict>
 	</dict>
-	<key>year-in-review-personalized-saved-subtitle-format</key>
-	<dict>
-		<key>NSStringLocalizedFormatKey</key>
-		<string>Vous avez enregistré cette année %1$d article%#@v1@. Chaque article sauvegardé reflète vos intérêts et contribue à créer une base de connaissances personnalisée sur Wikipédia.</string>
-		<key>v1</key>
-		<dict>
-			<key>NSStringFormatSpecTypeKey</key>
-			<string>NSStringPluralRuleType</string>
-			<key>NSStringFormatValueTypeKey</key>
-			<string>d</string>
-			<key>one</key>
-			<string>, à savoir %2$@</string>
-			<key>other</key>
-			<string>s, dont %2$@, %3$@ et %4$@</string>
-		</dict>
-	</dict>
 	<key>year-in-review-personalized-saved-title-format</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>Vous avez enregistré %1$d article%#@v1@</string>
+		<string>Vous avez sauvegardé %1$d article%#@v1@</string>
 		<key>v1</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
