--- a/Wikipedia/Localizations/zh-hans.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/zh-hans.lproj/Localizable.strings
@@ -408,7 +408,7 @@
 "donate-payment-method-prompt-apple-pay-button-title" = "使用Apple Pay捐款";
 "donate-payment-method-prompt-message" = "使用Apple Pay或选择其他支付方式捐款。";
 "donate-payment-method-prompt-other-button-title" = "其他付款方式";
-"donate-payment-method-prompt-title" = "使用Apple Pay捐款？";
+"donate-payment-method-prompt-title" = "使用 Apple Pay 捐款？";
 "donate-success-subtitle" = "您的慷慨解囊对我们意义重大。";
 "donate-success-title" = "谢谢您！";
 "donate-title" = "选择金额";
@@ -1037,11 +1037,11 @@
 "profile-button-badge-accessibility-label" = "个人资料（带有未读消息标记）";
 "profile-page-donate-subtext" = "或通过捐款来支持维基百科，使之维持免费且人人可访问。";
 "profile-page-join-subtext" = "注册维基百科账号来追踪您的贡献、离线保存条目，以及跨设备同步。";
-"profile-page-join-title" = "加入维基百科/登录";
+"profile-page-join-title" = "登录/加入维基百科";
 "profile-page-logged-out-year-in-review-subtext" = "请登录或创建账号，以在来年获得更好的年度回顾";
 "profile-page-title-logged-out" = "账号";
-"profile-year-in-review-login-subtitle" = "登录或创建帐户即可再次查看年度回顾，并有资格获得更多个性化见解。";
-"profile-year-in-review-login-title" = "登录即可查看年度回顾";
+"profile-year-in-review-login-subtitle" = "登录或创建账户，以便再次查看年度回顾，并有资格获得更多个性化分析数据。";
+"profile-year-in-review-login-title" = "登录以访问年度回顾";
 "project-name-mediawiki" = "MediaWiki";
 "project-name-wikibooks" = "维基教科书";
 "project-name-wikidata" = "维基数据";
@@ -1225,7 +1225,7 @@
 "settings-storage-and-syncing-show-default-reading-list-title" = "显示保存的阅读列表";
 "settings-storage-and-syncing-title" = "条目存储与同步";
 "settings-title" = "设置";
-"settings-year-in-review-header" = "关闭“年度回顾”将清除所有存储的个性化见解并隐藏“年度回顾”。";
+"settings-year-in-review-header" = "关闭年度回顾将清除所存储的所有个性化分析数据，并将年度回顾隐藏。";
 "share-a-fact-made-with" = "维基百科应用出品";
 "share-article-name-on-wikipedia" = "维基百科上的“$1”：";
 "share-building" = "正在构建分享预览卡片…";
@@ -1471,58 +1471,61 @@
 "wikitext-upload-save-sign-in" = "登录";
 "wikitext-upload-save-terms-and-licenses-ccsa4" = "发布更改即代表您同意$1使用条款$2，并且不可撤销地同意以$3CC BY-SA 4.0$4与$5GFDL$6协议发布您的贡献。您同意超链接或网页链接足够代表知识共享协议所规定的署名。";
 "wikitext-upload-save-terms-name" = "使用条款";
-"year-in-review-base-donate-subtitle" = "有了您的帮助，支撑维基百科的非营利组织，维基媒体基金会将继续保障您需要的信息不含广告且足够可靠，同时采用最前沿工具和技术保证维基百科得以稳定运行。现在就考虑捐款吧。[详细了解我们的工作]($1)。";
-"year-in-review-base-donate-title" = "我们并未在维基百科上设置广告";
+"year-in-review-base-donate-subtitle" = "在您的帮助下，维基媒体基金会——维基百科背后的非营利组织——将继续努力，以确保您依赖的信息没有广告且值得信赖，同时通过尖端工具和技术，使维基百科保持流畅运行。请考虑在今天捐款。[进一步了解我们的工作]($1)。";
+"year-in-review-base-donate-title" = "维基百科投放了 0 条广告";
+"year-in-review-base-editors-subtitle" = "今年截止到现在，维基百科的志愿者编辑社区在 iOS 应用上进行了超过 $1 次编辑。维基百科的核心和灵魂是我们的全球社群，包括志愿者、捐赠者和像您一样的数十亿读者——所有人共享对可靠信息的不受限访问。";
+"year-in-review-base-editors-title" = "iOS 应用上的编辑者进行了超过 $1 次编辑";
+"year-in-review-base-edits-subtitle" = "今年，维基百科的平均编辑速度为每分钟 $1 次。文章由志愿者参考可靠信息来源协作创建和改进。我们所有人都有可以分享的知识。[了解如何参与]($2）。";
+"year-in-review-base-edits-title" = "维基百科每分钟被编辑 $1 次";
+"year-in-review-base-reading-subtitle" = "今年，维基百科拥有超过 6300 万篇文章，涵盖 300 多种活跃语言。您与数百万人一起拓展知识，探索各种主题。";
+"year-in-review-base-reading-title" = "维基百科提供 300 多种语言版本";
 // Fuzzy
-"year-in-review-base-editors-subtitle" = "今年，维基百科的志愿编者社群在iOS应用程序上作出了不少于$1笔编辑。由志愿者、捐赠者和像您一样千千万万的读者组成的社群，是维基百科的命脉所在，团结起来，不受限制地共享可靠的信息。";
-"year-in-review-base-editors-title" = "维基人在iOS应用程序上作出了不少于$1笔编辑。";
-"year-in-review-base-edits-subtitle" = "今年，维基百科的平均编辑率为每分钟$1 。文章是使用可靠来源协作创建和改进的。我们所有人都有知识可以分享，[了解如何参与]（ $2 ）。";
-"year-in-review-base-edits-title" = "每分钟，在维基百科上有$1次编辑";
-"year-in-review-base-reading-subtitle" = "维基百科拥有超过$2种活跃语言的$1百万篇条目。您与数百万人一起拓展知识面，探索各种主题。";
-"year-in-review-base-reading-title" = "维基百科提供超过300种语言版本";
-// Fuzzy
-"year-in-review-base-saved-subtitle" = "今年，活跃的 iOS 用户拥有超过$1的阅读清单。将文章添加到阅读清单可让您即使在离线时也能访问文章。您还可以登录以跨设备同步阅读清单。";
-"year-in-review-base-saved-title" = "我们有超过$1百万个阅读清单";
-"year-in-review-base-viewed-subtitle" = "iOS应用程序用户阅读了维基百科条目$1十亿次。无论人们身处何方，维基百科都是回答问题、查找学习工作所需信息，或学习新知的首选。";
-"year-in-review-base-viewed-title" = "我们在维基百科上阅读了$1十亿次的条目。";
+"year-in-review-base-saved-subtitle" = "今年，活跃的 iOS 应用用户共有超过 3160 万个阅读列表。将文章添加到阅读列表后，您就可以离线访问文章。您还可以登录账户，在不同设备上同步阅读列表。";
+"year-in-review-base-saved-title" = "我们有超过 $1 万个阅读列表 ";
+"year-in-review-base-viewed-subtitle" = "iOS 应用用户浏览了维基百科文章 15 亿次。对于全世界的人们来说，维基百科是解答疑问、查找上学或工作所需信息或学习新知识的第一站。";
+"year-in-review-base-viewed-title" = "我们浏览了维基百科文章 $1 亿次";
 "year-in-review-button-title" = "年度回顾";
-"year-in-review-day-friday" = "周五";
+"year-in-review-day-friday" = "星期五";
 "year-in-review-day-monday" = "星期一";
 "year-in-review-day-saturday" = "星期六";
-"year-in-review-day-sunday" = "周日";
+"year-in-review-day-sunday" = "星期日";
 "year-in-review-day-thursday" = "星期四";
 "year-in-review-day-tuesday" = "星期二";
 "year-in-review-day-wednesday" = "星期三";
-"year-in-review-donate" = "捐款";
+"year-in-review-donate" = "捐赠";
 "year-in-review-donate-now" = "立即捐款";
-"year-in-review-feature-announcement-body" = "查看在维基百科上所阅读和编辑条目的深入分析，并分享一年中的闪光点。";
-"year-in-review-feature-announcement-body-personalized" = "查看您在维基百科应用程序上所阅读条目的深入分析，分享您的旅程，并发现您一年中的亮点。";
+"year-in-review-feature-announcement-body" = "查看我们阅读和编辑的文章的分析数据，并分享我们这一年使用维基百科的亮点。";
+"year-in-review-feature-announcement-body-personalized" = "查看您在维基百科应用上阅读的文章的分析数据，分享您的旅程，并发现您这一年的亮点。";
 "year-in-review-feature-announcement-title" = "探索维基百科回顾";
 "year-in-review-feature-announcement-title-personalized" = "探索您的维基百科年度回顾";
-"year-in-review-feature-explore-body-personalized" = "查看有关您在维基百科应用程序上所阅读的条目和所作编辑的深入分析。您的阅读历史将受到保护。阅读见解使用设备上本地存储的数据计算。";
+"year-in-review-feature-explore-body-personalized" = "查看关于您在维基百科应用上阅读了哪些文章以及所做编辑的分析数据。您的阅读历史记录受到保护。阅读分析数据是根据您设备上存储的本地数据计算出来的。";
 "year-in-review-finish" = "完成";
-"year-in-review-login-subtitle" = "登录或创建账户即可获得更多个性化内容";
-"year-in-review-login-title" = "改善你的年度回顾";
-"year-in-review-personalized-day-subtitle-format" = "您在$1上阅读的文章最多。显然， $1是您探索新内容的最佳时间。感谢您充分利用您的阅读时间！";
+"year-in-review-login-subtitle" = "登录或创建账户，以便有资格获得更多个性化分析数据";
+"year-in-review-login-title" = "改进您的年度回顾";
+"year-in-review-personalized-day-subtitle-format" = "您在 $1 阅读的文章最多。很明显，$1 是您探索新内容最重要的日子。感谢您充分利用您的阅读时间！";
 "year-in-review-personalized-day-title-format" = "您阅读最多的是$1 。";
-"year-in-review-personalized-donate-subtitle" = "感谢您对自由知识的未来做出的投资。今年，维基媒体基金会进一步改进了技术，以便更好地服务于每位读者和志愿者，还开发了协作促进工具，以及使维基百科支持了更多语言。[详细了解我们的工作]($1)。";
-"year-in-review-personalized-donate-title" = "您的慷慨捐赠帮助维基百科蓬勃发展";
-"year-in-review-personalized-editing-subtitle-format" = "您在维基百科上编辑了{{PLURAL:$1|$1次}}。感谢您成为世界各地在维基媒体项目上作出贡献的志愿编者中的一员。";
+"year-in-review-personalized-donate-subtitle" = "感谢您对知识免费的未来投资。今年，维基媒体基金会改进了技术，从而更好地服务每一位读者和志愿者，并开发了增强协作的工具，另外还支持了维基百科的更多语言版本。[进一步了解我们的工作]($1)。";
+"year-in-review-personalized-donate-title" = "您的慷慨让维基百科兴旺";
+"year-in-review-personalized-editing-subtitle-format" = "您编辑了维基百科 $1 次。感谢您成为志愿者编辑，并对全世界的维基媒体项目产生影响。";
 "year-in-review-personalized-editing-subtitle-format-500plus" = "您在维基百科上的编辑次数超过了500次。感谢您成为世界各地在维基媒体项目上作出贡献的志愿编者中的一员。";
-"year-in-review-personalized-editing-title-format" = "您在维基百科上编辑了{{PLURAL:$1|$1次}}。";
+"year-in-review-personalized-editing-title-format" = "您编辑了维基百科 $1 次";
 "year-in-review-personalized-editing-title-format-500plus" = "您在维基百科上的编辑次数超过了500次。";
-"year-in-review-personalized-reading-subtitle-format" = "今年，您阅读了{{PLURAL:$1|$1篇条目}}。维基百科拥有超过$3种活跃语言的$2百万篇条目。您与数百万人一起拓展知识面，探索各种主题。";
-"year-in-review-personalized-reading-title-format" = "您今年阅读了{{PLURAL:$1|$1篇条目}}。";
-"year-in-review-personalized-saved-subtitle-format" = "您今年保存了{{PLURAL:$1|$1篇条目}}，包括$2、$3和$4。每篇保存的条目都反映了您的兴趣，有助于在维基百科上建立个性化的知识库。";
-"year-in-review-personalized-saved-title-format" = "您保存了{{PLURAL:$1| $1条目}}";
-"year-in-review-share-text" = "这是我的维基百科年度回顾，使用维基百科iOS应用创建";
-"year-in-review-survey-additional-thoughts" = "您有更多意见吗？";
+"year-in-review-personalized-reading-subtitle-format" = "今年，您阅读了 $1 篇文章。维基百科有超过 $2 万篇文章，涵盖 #3 多种活跃语言。您与数百万人一起拓展知识，探索各种主题。";
+"year-in-review-personalized-reading-title-format" = "您今年阅读了 $1 篇文章";
+"year-in-review-personalized-saved-subtitle-format" = "您保存了 $1 篇文章，包括 $2、$3 和 $4。每一篇保存的文章都反映了您的兴趣，并帮助您在维基百科上建立个性化的知识库。";
+"year-in-review-personalized-saved-title-format" = "您保存了 $1 篇文章";
+"year-in-review-share-text" = "这里是我的维基百科年度回顾。通过 Wikipedia iOS 应用创建而成 (https://apps.apple.com/app/wikipedia/id324715238) #WikipediaYearInReview";
+"year-in-review-survey-additional-thoughts" = "您还有别的想法吗？";
 "year-in-review-survey-neutral" = "一般";
 "year-in-review-survey-satisfied" = "满意";
-"year-in-review-survey-subtitle" = "请帮助改进维基百科年度回顾。您对此功能满意吗？明年希望看到什么？";
+"year-in-review-survey-subtitle" = "帮助改进您的年度回顾。您对这个功能满意吗？";
 "year-in-review-survey-title" = "满意度调查";
 "year-in-review-survey-unsatisfied" = "不满意";
 "year-in-review-survey-very-satisfied" = "非常满意";
 "year-in-review-survey-very-unsatisfied" = "非常不满意";
 "year-in-review-wikipedia-w-accessibility-label" = "维基百科 w 徽标";
 "year-in-review-wmf-logo-accessibility-label" = "维基媒体基金会标志";
+"year-in-review-feature-explore-body" = "维基百科是世界历史上最大的知识资源库，向每个地方的每个人免费开放。通过维基百科的视角回顾 2024 年。";
+"year-in-review-personalized-edit-views-title-format" = "您编辑的文章最近已被浏览超过 $1 次";
+"year-in-review-personalized-edit-views-subtitle-format" = "全世界的读者感谢您做出的贡献。在过去 2 个月中，您编辑的文章总浏览量已达 $1 次。正因为有像您这样的编辑者，维基百科才能不断改进，成为基于事实的、可靠的全球知识资源库。";
+
