--- a/Wikipedia/Localizations/fr.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/fr.lproj/Localizable.strings
@@ -797,8 +797,8 @@
 "microsite-yir-english-non-donor-slide-title" = "Aucune publicité n'est diffusée sur Wikipédia";
 "microsite-yir-english-reading-slide-subtitle" = "Les utilisateurs ont passé environ 2,4 milliards d'heures (près de 275 000 ans !) à lire Wikipédia en anglais en 2024. Wikipédia est là lorsque vous souhaitez en savoir plus sur l'évolution de notre monde, gagner un pari entre amis ou répondre à la question d'un enfant curieux.";
 "microsite-yir-english-reading-slide-title" = "Nous avons passé 2,4 milliards d’heures à lire";
-"microsite-yir-english-saved-reading-slide-subtitle" = "Les utilisateurs actifs de l'application iOS comptaient plus de 31,6 millions de listes de lecture cette année. L'ajout d'articles aux listes de lecture vous permet d'accéder aux articles même hors ligne. Vous pouvez également vous connecter pour synchroniser les listes de lecture sur plusieurs appareils.";
-"microsite-yir-english-saved-reading-slide-title" = "Nous avions plus de 31,6 millions de listes de lecture";
+"microsite-yir-english-saved-reading-slide-subtitle" = "Les utilisateurs actifs de l'application iOS comptaient plus de 62,2 millions de listes de lecture cette année. L'ajout d'articles aux listes de lecture vous permet d'accéder aux articles même hors ligne. Vous pouvez également vous connecter pour synchroniser les listes de lecture sur plusieurs appareils.";
+"microsite-yir-english-saved-reading-slide-title" = "Nous avions plus de 62,2 millions de listes de lecture";
 "microsite-yir-english-top-read-slide-subtitle" = "Lorsque les utilisateurs veulent découvrir notre monde — le bon, le mauvais, l’étrange ou  le sauvage — ils se tournent vers Wikipédia. Les 5 articles les plus consultés sur Wikipédia en anglais ont été :\n1. $1\n2. $2\n3. $3\n4. $4\n5. $5\nLisez $6notre article de blog dédié$7.";
 "microsite-yir-english-top-read-slide-title" = "Les articles les plus populaires de Wikipédia en anglais";
 "more-languages-tooltip-description" = "Rechercher sur Wikipédia dans plus de 300 langues";
@@ -1463,11 +1463,11 @@
 "wikitext-upload-save-sign-in" = "Se connecter";
 "wikitext-upload-save-terms-and-licenses-ccsa4" = "En publiant les modifications, vous acceptez les $1Conditions d'utilisation$2 et acceptez irrévocablement de mettre votre contribution sous les licences $3CC BY-SA 3.0$4 et la $5GFDL$6. Vous acceptez qu’un hyperlien ou une URL soit une attribution suffisante pour la licence Creative Commons.";
 "wikitext-upload-save-terms-name" = "Conditions d’utilisation";
-"year-in-review-base-donate-subtitle" = "Grâce à votre aide, la Fondation Wikimédia, l'organisme à but non lucratif à l'origine de Wikipédia, continuera à garantir que les informations sur lesquelles vous comptez sont exemptes de publicité et fiables, tout en permettant à Wikipédia de fonctionner sans problème avec des outils et des technologies de pointe. N'hésitez pas à faire un don dès aujourd'hui. [En savoir plus sur notre travail]($1).";
-"year-in-review-base-donate-title" = "Aucune publicité n'est diffusée sur Wikipédia";
-"year-in-review-base-editors-subtitle" = "Les bénévoles ont apporté 81 987 181 modifications dans plus de 300 versions linguistiques différentes de Wikipédia. Plus de 31,2 millions de modifications ont été apportées à Wikipédia en anglais. Chaque heure de chaque jour, des bénévoles travaillent à l'amélioration de Wikipédia.";
-"year-in-review-base-editors-title" = "Les contributeurs de l'application iOS ont effectué plus de $1 modifications";
-"year-in-review-base-edits-subtitle" = "Cette année, Wikipédia a été modifié à un rythme moyen de $1 fois par minute. Les articles sont créés et améliorés de manière collaborative à l'aide de sources fiables. Nous avons tous des connaissances à partager, [voyez comment participer]($2).";
+"year-in-review-base-donate-subtitle" = "Grâce à votre soutien, la Fondation Wikimedia continuera de garantir un accès à des informations fiables et sans publicité, tout en maintenant Wikipédia à la pointe technologique. [Soutenez notre mission]($1).";
+"year-in-review-base-donate-title" = "0 publicité sur Wikipédia";
+"year-in-review-base-editors-subtitle" = "La communauté de bénévoles de Wikipédia a réalisé plus de 555 647 modifications via l’application mobile cette année. Le cœur de Wikipédia réside dans sa communauté mondiale de contributeurs volontaires, de donateurs et de lecteurs — tous unis pour partager un accès universel à des informations fiables.";
+"year-in-review-base-editors-title" = "Plus de $1 modifications ont été faites par les contributeurs";
+"year-in-review-base-edits-subtitle" = "Cette année, Wikipédia a été modifié en moyenne $1 fois par minute. Les articles sont créés et améliorés collectivement, en s’appuyant sur des sources vérifiées. [Chacun peut contribuer au savoir collectif]($2).";
 "year-in-review-base-edits-title" = "Wikipédia a été modifié $1 fois par minute";
 "year-in-review-base-reading-subtitle" = "Cette année, Wikipédia a atteint plus de $1 millions d'articles dans plus de $2 langues actives. Vous avez rejoint des millions de personnes qui ont souhaité élargir leurs connaissances et explorer des sujets divers.";
 "year-in-review-base-reading-title" = "Wikipédia était disponible dans plus de 300 langues";
